Overflow-x fixed final

--- a/mobile.css
+++ b/mobile.css
@@ -31,7 +31,7 @@
     .faq{
         width: 95%;
     }
-    body{
+    .container{
         overflow-x: hidden;
     }
 }
